--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;800&display=swap');
+
+body {
+  background-image: url(https://images.pexels.com/photos/110854/pexels-photo-110854.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  position: relative; 
+  color: black;
+  font-family: 'Orbitron', sans-serif;
+}
+
+.container {
+  background-color: rgba(245, 245, 245, 0.800);
+  margin-top: 3%;
+  margin-bottom: 3%;
+  border: solid 2px black;
+  border-radius: 10px;
+}
+
+h1 {
+  font-family: 'Orbitron', sans-serif;
+  color: black;
+  text-shadow: orange 2px 2px;
+}
+
+ul {
+list-style: "🚀";
+}
+
+li {
+  line-height: 2em;
+  color: orange;
+  text-shadow: black 1px 1px;
+}
 #output {
   display: none;
 }
