add extra details on WHO and margin control.

--- a/src/styles.css
+++ b/src/styles.css
@@ -24,20 +24,24 @@ h1 {
   text-shadow: orange 2px 2px;
 }
 
-ul {
-list-style: "🚀";
+.form-control{
+  margin-bottom: 10px;
 }
 
-u {
-  font-size: x-large;
-  font-style: italic;
-  color: orange;
+ul {
+list-style: "🚀";
 }
 
 li {
   line-height: 2em;
   color: rgba(255, 166, 0, 0.800);
   text-shadow: black 1px 1px;
+}
+
+u {
+  font-size: x-large;
+  font-style: italic;
+  color: orange;
 }
 
 #output {
